Minor tweaks to header padding. Fixed main-content overflowing viewport on small.

--- a/styles.css
+++ b/styles.css
@@ -668,12 +668,12 @@ hr {
   }
 
   .main-content-area {
-    width: 100vw;
+    width: 100%;
     margin: 0;
   }
 
   .header-container {
-    padding: 0 3vw;
+    padding: 0 3vw 0 3vw;
   }
 
   .logo-header {
